--- a/ReportServer/package.json
+++ b/ReportServer/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-fileupload": "^1.4.1",
     "@types/node": "^18.11.11",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
@@ -23,6 +24,7 @@
     "@prisma/client": "^4.7.1",
     "discord-webhook-ts": "^5.0.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "moment": "^2.29.4"
   }
 }
