--- a/ReportApp_Android/app/src/main/AndroidManifest.xml
+++ b/ReportApp_Android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_launcher"
@@ -14,10 +13,26 @@
         android:roundIcon="@drawable/ic_launcher_rounded"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReportApp_Android"
-        tools:targetApi="31" >
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".View.ReportDetailActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".View.AddReportActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".View.RegisterActivity"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -25,7 +40,7 @@
         <activity
             android:name=".View.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.ReportApp_Android" >
+            android:theme="@style/Theme.ReportApp_Android">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,7 +55,7 @@
             android:name=".View.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ReportApp_Android" >
+            android:theme="@style/Theme.ReportApp_Android">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
